# AlacrittyTuner

./: .gitignore  PKGBUILD  README.es.md  README.md  main.py  pyproject.toml
alacritty_tuner/: alacritty.toml  cli.py  config_manager.py  exceptions.py  main.py
tests/: test_alacrittytuner_class.py
themes/: ayu-dark.toml  ayu-mirage.toml  bluescreen.toml  dracula.toml  greenscreen.toml  material-darker.toml  material-ocean.toml  monokai.toml  nord-wave.toml  nord.toml  rosepine.toml
